worker/deloyment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod-2
  template:
    metadata:
      labels:
        app: pod-2
    spec:
      containers:
      - name: pod-2
        image: 762146779104.dkr.ecr.us-east-1.amazonaws.com/serverless:nodejsbasic-latest
