worker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod-1
  template:
    metadata:
      labels:
        app: pod-1
    spec:
      containers:
      - name: pod-1
        image: 762146779104.dkr.ecr.us-east-1.amazonaws.com/serverless:crudjs-latest
