worker/fargate-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fargate-pods # deployment name
  namespace: dev # namespace on fargate-profile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fargate-pods # match label
  template:
    metadata:
      labels:
        app: fargate-pods # match label
    spec:
        - name: fargate-pods
          image: 567891620707.dkr.ecr.us-east-1.amazonaws.com/lks-ecr-imannuel:showip-latest
          ports:
            - containerPort: 5000
