worker/multi-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showip
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: showip
        image: 762146779104.dkr.ecr.us-east-1.amazonaws.com/serverless:crudjs-latest
        ports:
          - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejscrud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nodejscrud
        image: 762146779104.dkr.ecr.us-east-1.amazonaws.com/serverless:nodejsbasic-latest
        ports:
          - containerPort: 8000
