worker/app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod
  template:
    metadata:
      labels:
        app: pod
    spec:
      containers:
      - name: pod-2
        image: 762146779104.dkr.ecr.us-east-1.amazonaws.com/serverless:nodejsbasic-latest
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: LoadBalancer  
  selector:
    app: pod-2
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 8000
