worker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showip-service
spec:
  type: LoadBalancer  
  selector:
    app: pod-1 
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 5000
