worker/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: LoadBalancer  
  selector:
    app: pod-2
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 8000
