worker/app-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-3
  labels:
    app: app-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-3
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
      - name: app-3
        image: 762146779104.dkr.ecr.us-east-1.amazonaws.com/serverless:crudjs-latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  type: NodePort  # Wajib NodePort untuk target instance
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80          # Port yang diakses oleh ALB
      targetPort: 5000  # Port di dalam Pod
      nodePort: 30080   # Port tetap di setiap node

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "instance"
    alb.ingress.kubernetes.io/ip-address-type: "IPv4"    
    alb.ingress.kubernetes.io/group.name: "app-group"
spec:
  ingressClassName: alb  
  rules:
    - host: showip.com
      http:
        paths:
            backend:
              service:
                name: app-3-service
                port:
                  number: 80
