worker/pod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "instance"
    alb.ingress.kubernetes.io/ip-address-type: "ipv4"    
    alb.ingress.kubernetes.io/group.name: "app-group"
spec:
  ingressClassName: alb  
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /showip
            pathType: Prefix
            backend:
              service:
                name: multi-pod-service
                port:
                  number: 80
          - path: /nodejscrud
            pathType: Prefix
            backend:
              service:
                name: multi-pod-service
                port:
                  number: 81
